--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body class="bg-stone-200 flex flex-col">
     <section
       id="carrinho"
-      class="fixed top-0 right-[-360px] bg-slate-950 h-screen w-[360px] text-slate-200 z-50"
+      class="fixed top-0 right-[-360px] bg-slate-950 h-screen w-[360px] text-slate-200 z-50 duration-1000 border-l border-slate-200 p-5 flex flex-col justify-between"
     >
       <div id="cabecalho-carrinho" class="flex justify-between m-4">
         <p>Meu Carrinho</p>
@@ -24,16 +24,13 @@
           <i class="fa-solid fa-circle-xmark"></i>
         </button>
       </div>
-      <section id="produtos-carrinho">
-        <p>Camisa larga com bolsos</p>
-        <p>Casaco reto com Lã</p>
-        <p>Jaqueta com efeito camurça</p>
-      </section>
-      <p id="preco-total">$ 200</p>
+      <section id="produtos-carrinho"></section>
       <button class="bg-slate-200 text-slate-900 p-1">Finalizar compra</button>
     </section>
 
-    <header class="flex text-xl bg-slate-950 shadow-xl shadow-slate-400 px-8 py-4 justify-between sticky top-0">
+    <header
+      class="flex text-xl bg-slate-950 shadow-xl shadow-slate-400 px-8 py-4 justify-between sticky top-0 z-10"
+    >
       <img class="h-16" src="./assets/logo/hashtag.svg" alt="Logo Hashtag" />
       <div class="text-slate-200 flex gap-2 items-end mx-2">
         <button class="mx-2" id="abrir-carrinho">
@@ -43,7 +40,10 @@
       </div>
     </header>
     <main>
-      <section id="container-produto" class="flex flex-wrap p-10 justify-center gap-10"></section>
+      <section
+        id="container-produto"
+        class="flex flex-wrap p-10 justify-center gap-10"
+      ></section>
     </main>
     <script type="module" src="./main.js"></script>
   </body>
